add some change

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.HomeFragment">
-
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/main_coordinator"
         android:layout_width="match_parent"
@@ -16,28 +18,56 @@
         <org.imaginativeworld.whynotimagecarousel.ImageCarousel
             android:id="@+id/main_carousel"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="350dp"
             app:carouselType="BLOCK"
             app:showNavigationButtons="false"
             app:imageScaleType="fitXY"
+            app:autoPlay="true"
+            app:autoPlayDelay="3000"
+            app:touchToPause="true"
+            app:captionMargin="8dp"
+            app:captionTextSize="14sp"
             />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     <LinearLayout
-        android:id="@+id/lin_nowplaying"
+        android:id="@+id/lin_topRated"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/main_coordinator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/lin_nowplaying"
+        android:layout_margin="8dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Top Rated"
+            android:textSize="20sp"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="@android:color/black"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_toprated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/lin_nowplaying"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/lin_topRated"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/lin_popular"
         android:layout_margin="8dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Now Playing"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:fontFamily="@font/poppins_bold"
             android:textColor="@android:color/black"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_nowplaying"
@@ -52,12 +82,14 @@
         app:layout_constraintTop_toBottomOf="@id/lin_nowplaying"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="8dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Popular"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:fontFamily="@font/poppins_bold"
             android:textColor="@android:color/black"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_popular"
@@ -65,3 +97,4 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
