--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/lin_topRated"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/lin_popular"
+        app:layout_constraintBottom_toTopOf="@id/lin_trending"
         android:layout_margin="8dp">
         <TextView
             android:layout_width="match_parent"
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/lin_popular"
+        android:id="@+id/lin_trending"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -87,12 +87,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Popular"
+            android:text="Trending"
             android:textSize="20sp"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@android:color/black"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_popular"
+            android:id="@+id/rv_Trending"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
