--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
             android:text="Top Rated"
             android:textSize="20sp"
             android:fontFamily="@font/poppins_bold"
-            android:textColor="@android:color/black"/>
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_toprated"
             android:layout_width="match_parent"
@@ -67,8 +67,7 @@
             android:layout_height="wrap_content"
             android:text="Now Playing"
             android:textSize="20sp"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@android:color/black"/>
+            android:fontFamily="@font/poppins_bold" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_nowplaying"
             android:layout_width="match_parent"
@@ -90,7 +89,7 @@
             android:text="Trending"
             android:textSize="20sp"
             android:fontFamily="@font/poppins_bold"
-            android:textColor="@android:color/black"/>
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_Trending"
             android:layout_width="match_parent"
