add api credit, adapter and many more

--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -83,13 +83,14 @@
                     android:fontFamily="@font/poppins_regular"
                     android:textSize="16sp"
                     android:layout_marginStart="8dp"/>
-
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_detail_genre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"/>
+                android:orientation="horizontal"
+                android:layout_marginStart="16dp"
+                android:layout_below="@id/lin_rating_detail"/>
         </RelativeLayout>
 
         <androidx.cardview.widget.CardView
@@ -99,6 +100,7 @@
             app:cardCornerRadius="10dp"
             app:cardElevation="8dp"
             android:layout_margin="8dp"
+            app:cardUseCompatPadding="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardviewposter">
@@ -126,7 +128,28 @@
                 android:fontFamily="@font/poppins_regular"/>
         </LinearLayout>
         </androidx.cardview.widget.CardView>
-
+        <LinearLayout
+            android:id="@+id/lin_topcast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card_overview"
+            >
+            <TextView
+                android:id="@+id/tv_title_cast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Top Billed Cast"
+                android:textSize="18sp"
+                android:fontFamily="@font/poppins_semibold"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_detail_cast"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
