--- a/app/src/main/res/layout/rv_item_search.xml
+++ b/app/src/main/res/layout/rv_item_search.xml
@@ -8,15 +8,15 @@
     app:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-    <ImageView
-        android:id="@+id/iv_item"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:scaleType="fitXY"
-        android:contentDescription="ImageView"/>
+        <ImageView
+            android:id="@+id/iv_item"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:scaleType="fitXY"
+            android:contentDescription="ImageView"/>
         <TextView
             android:id="@+id/tv_name_main"
             android:layout_width="wrap_content"
