--- a/app/src/main/res/layout/rv_item_credit.xml
+++ b/app/src/main/res/layout/rv_item_credit.xml
@@ -8,8 +8,8 @@
     app:cardUseCompatPadding="true">
 
 <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="150dp"
+    android:layout_height="300dp"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/iv_item_credit"
