--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorPrimary">#303030</color>
     <color name="colorPrimaryDark">#202020</color>
     <color name="colorAccent">#03DAC5</color>
-
+    <color name="shimmereffect">#dddddd</color>
 
 </resources>
